// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Order.tsx bad item 1`] = `
<div
  className="Order"
>
  <div
    className="Order-header"
  >
    <span
      className="Order-shop"
    >
      front duratskiy
    </span>
    <span
      id="date"
    >
      228
    </span>
  </div>
  <div
    className="Order-items"
  >
    <div>
      Заказ пуст...
    </div>
  </div>
</div>
`;

exports[`Order.tsx bad item 2`] = `
<div
  className="Order"
>
  <div
    className="Order-header"
  >
    <span
      className="Order-shop"
    >
      front duratskiy
    </span>
    <span
      id="date"
    >
      228
    </span>
  </div>
  <div
    className="Order-items"
  >
    <div
      className="Order-item"
      key="0"
    >
      go
    </div>
    <div
      className="Order-item"
      key="1"
    >
      luchshe
    </div>
  </div>
</div>
`;

exports[`Order.tsx bad order 1`] = `""`;

exports[`Order.tsx render 1`] = `""`;
